disbling auto-window-vscroll for better performance

--- a/emacs.org
+++ b/emacs.org
@@ -561,6 +561,8 @@
 (setq history-length 25)
 (setq select-enable-clipboard t) ;; Merge OS and Emacs' clipboards
 
+(setq auto-window-vscroll nil)   ;; Gives us better line scrolling performance
+
 ;; We'll ask emacs to put all customizations made via it's customize package in a
 ;; separate file... so we can ignore it later :)
 (setq custom-file (concat user-emacs-directory "/custom--ignored.el"))
