--- a/emacs.org
+++ b/emacs.org
@@ -631,7 +631,7 @@
 *** indent modes
 #+begin_src emacs-lisp
 (setq-default c-basic-offset 4 c-default-style "linux")
-(setq-default tab-width 4 indent-tabs-mode t)
+(setq-default tab-width 4 indent-tabs-mode nil)
 #+end_src
 
 *** C/C++ common
