--- a/emacs.org
+++ b/emacs.org
@@ -549,6 +549,7 @@
   ( "c" helm-yas-complete nil)
   )
 
+(setq helm-org-rifle-directories-recursive nil)
 (setq org-directory "~/org-notes")
 (setq org-src-fontify-natively t)
 (setq org-src-preserve-indentation t)
