--- a/emacs.org
+++ b/emacs.org
@@ -4,12 +4,6 @@
 #+begin_src emacs-lisp
 (message "emacs.org : starting init stage")
 
-(setq package-quickstart t)
-
-
-;; Increase garbage collector threshold for better performance
-(setq gc-cons-threshold (* 5 gc-cons-threshold))
-
 (require 'package)
 (require 'cl)
 
@@ -23,7 +17,7 @@
 (when (not package--initialized) (package-initialize) )
 
 ;; Let's byte compile all custom packages
-(byte-recompile-directory (expand-file-name "~/.emacs.d/custom-packages") 0)
+;; (byte-recompile-directory (expand-file-name "~/.emacs.d/custom-packages") 0)
 #+end_src
 
 * PACKAGES
@@ -91,10 +85,14 @@
 #+end_src
 ** themes and colours
 #+BEGIN_SRC emacs-lisp
-(customize-set-variable 'scroll-bar-mode nil)
-(customize-set-variable 'horizontal-scroll-bar-mode nil)
-(customize-set-variable 'menu-bar-mode nil)
-(customize-set-variable 'tool-bar-mode nil)
+;; On emacs 27 this will be done from early-init.el
+(if (< emacs-major-version 27)
+    (progn
+      (customize-set-variable 'scroll-bar-mode nil)
+      (customize-set-variable 'horizontal-scroll-bar-mode nil)
+      (customize-set-variable 'menu-bar-mode nil)
+      (customize-set-variable 'tool-bar-mode nil)))
+
 
 (custom-set-variables
  '(custom-safe-themes
@@ -181,9 +179,7 @@
 
       (global-hl-line-mode t)
 
-      (sml/setup)
-      )
-     )
+      (sml/setup)))
 
 #+END_SRC
 
@@ -1011,7 +1007,7 @@
 
 (defun reload-emacs-config ()
 (interactive)
-(load-file "~/.emacs"))
+(load-file "~/.emacs.d/init.el"))
 
 (defun org-babel-reload-emacs-org()
 (interactive)
