add lexical binding for emacs.org

--- a/emacs.org
+++ b/emacs.org
@@ -2,6 +2,8 @@
 
 * INIT BASICS
 #+begin_src emacs-lisp
+;;; -*- lexical-binding: t -*-
+
 (message "emacs.org : starting init stage")
 
 (require 'package)
