--- a/emacs.org
+++ b/emacs.org
@@ -836,6 +836,29 @@
 
 (define-key control-semi-map (kbd "C-m") 'helm-swoop)
 (define-key control-semi-map (kbd "m") 'helm-multi-swoop-all)
+
+
+(defun helm-buffer--show-details (buf-name prefix help-echo
+                                  size mode dir face1 face2
+                                  proc details type)
+  (append
+   (list
+    (concat prefix
+            (propertize buf-name 'face face1
+                        'help-echo help-echo
+                        'type type)))
+   (and details
+        (list size mode
+              (propertize
+               (if proc
+                   (format "(%s %s in `%s')"
+                           (process-name proc)
+                           (process-status proc) dir)
+                 (format "%s" dir))
+               'face '((((class color) (min-colors 89)) (:foreground "grey"))) )))))
+
+
+(setq helm-buffer-max-length 60)
 #+end_src
 
 ** helm-xref
