--- a/emacs.org
+++ b/emacs.org
@@ -258,6 +258,7 @@
 (require 'bind-key)
 (bind-key* "C-;" 'control-semi-map)
 
+;; TODO: maybe instead check we are on windowed platform?
 (if (not (display-graphic-p))
     (progn
     (require 'key-chord)
@@ -810,9 +811,19 @@
         ("\\.cmd\\'" . bat-mode)
         ("\\.bat\\'" . bat-mode)
         ("\\.yml\\'" . yaml-mode)
-
         ))
 #+end_src
+
+** SGML [XML/HTML]
+#+BEGIN_SRC emacs-lisp
+(require 'sgml-mode)
+
+(defun reformat-xml ()
+  (interactive)
+  (save-excursion
+    (sgml-pretty-print (point-min) (point-max))
+    ))
+#+END_SRC
 
 ** yas
 #+BEGIN_SRC emacs-lisp
