--- a/emacs.org
+++ b/emacs.org
@@ -402,10 +402,7 @@
  "
   ("m" make-frame nil)
   ("o" other-frame nil)
-  ("d" delete-frame nil)
-  )
-
-
+  ("d" delete-frame nil))
 #+END_SRC
 
 ** projectile
@@ -1204,17 +1201,28 @@
   )
 
 
+(defun g/dired-notes()
+  (interactive)
+  (progn
+    (dired "~/org-notes")
+    (helm-find-files-1 default-directory)
+    )
+
+  )
+
 (defhydra hydra-quickopen (:color blue)
   "
 [_t_] ~/notes/temp
 [_c_] ~/.emacs.d/emacs.org
 [_n_] org-notes
 [_;_] org rifle
+[_l_] dired ~/.emacs.d
 "
   ("t" qo-temp nil)
   ("c" qo-emacs-org nil)
   ("n" hydra-quickopen-notes/body nil)
   (";" helm-org-rifle-important nil)
+  ("l" g/dired-notes nil)
   )
 #+END_SRC
 
