--- a/emacs.org
+++ b/emacs.org
@@ -42,11 +42,11 @@
   '(
     ;; lsp-clangd
     ;; lsp-mode
-    elfeed
     ag
     clang-format
     company
     company-lsp
+    elfeed
     ggtags
     git-auto-commit-mode
     haskell-mode
@@ -65,6 +65,7 @@
     rust-mode
     shell-here
     smart-mode-line
+    smartparens
     swiper
     swiper-helm
     yaml-mode
@@ -671,15 +672,13 @@
 (delete-selection-mode 1)
 (show-paren-mode t)
 
-;; (semantic-mode t)
-
 ;; Make the interface a bit more snappy
 (setq idle-update-delay 0.1)
 
 (which-function-mode 1)
 (custom-set-faces '(which-func ((t (:foreground "LightSlateBlue")))))
 
-(customize-set-variable 'electric-pair-mode t)
+;; (customize-set-variable 'electric-pair-mode nil)
 (customize-set-variable 'bmkp-last-as-first-bookmark-file "~/.emacs.d/bookmarks" )
 
 (setq backup-by-copying t      ; don't clobber symlinks
@@ -711,8 +710,8 @@
 ** Programming
 *** indent modes
 #+begin_src emacs-lisp
-(setq-default c-basic-offset 4 c-default-style "linux")
-(setq-default tab-width 4 indent-tabs-mode nil)
+(setq-default c-basic-offset 3 c-default-style "linux")
+(setq-default tab-width 3 indent-tabs-mode nil)
 #+end_src
 
 *** C/C++ common
