--- a/emacs.org
+++ b/emacs.org
@@ -471,7 +471,7 @@
 ** clang
 *** clang-format
 #+BEGIN_SRC emacs-lisp
-(setq clang-format-style "google")
+(setq clang-format-style "{BasedOnStyle: google, ColumnLimit: 100, IndentWidth: 3, BreakBeforeBraces: Stroustrup}")
 #+END_SRC
 ** recentf
 #+begin_src emacs-lisp
